# MAgentClaw

./: .gitignore  AI_MODELS_SUMMARY.md  CLAW_ANALYSIS_REPORT.md  COMPARISON.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SUMMARY.md  OPENCLAW_LEARNING.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SKILLS_SUMMARY.md  UPGRADE_GUIDE.md  V1.3.0_COMPLETION_SUMMARY.md  V1.3.0_PROGRESS_SUMMARY.md  V1.5.0_ENHANCEMENT_SUMMARY.md  WEB_INTERFACE_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  start.ps1  start_enhanced.ps1  test_channels.py  test_core.py  test_heartbeat.py  test_maagentclaw.py  test_models.py  test_simplified.py  test_skills.py  test_tools.py  test_v160.py  v1.2.0_RELEASE.md
.github/workflows/: pypi.yml  release.yml  test.yml
config/: agents.json  models.json  system.json
docs/guides/: CHANNELS_GUIDE.md  FEISHU_MULTI_AGENT_GUIDE.md  HEARTBEAT_GUIDE.md  INDUSTRY_GUIDE.md  MODELS_GUIDE.md  QUICKSTART.md  QUICK_SETUP_GUIDE.md  RELEASE_GUIDE.md  SKILLS_GUIDE.md  TOOLS_GUIDE.md  USAGE.md
docs/summaries/: CHANNELS_SUMMARY.md  HEARTBEAT_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  RELEASE_CHECKLIST.md  TOOLS_SUMMARY.md
maagentclaw/: __init__.py  main.py  main_enhanced.py
maagentclaw/agents/: arbitrator.py  auditor.py  budget_manager.py  examples.py  multi_agent_orchestrator.py  presenter.py  reviewer.py  security.py
maagentclaw/channels/: __init__.py  base_channel.py  channel_manager.py  channel_router.py  cli_channel.py  multi_channel_adapter.py  rest_api_channel.py  websocket_channel.py
maagentclaw/config/: config_manager.py  enhanced_config.py
maagentclaw/core/: agent.py  planner.py  planner_executor.py
maagentclaw/distributed/: __init__.py
maagentclaw/human/: __init__.py  intervention.py
maagentclaw/interfaces/: enhanced_web_interface.py  web_interface.py
maagentclaw/managers/: agent_manager.py  collaboration.py  heartbeat_manager.py  session_manager.py  skill_manager.py  tool_manager.py  workspace.py
tests/: test_agents.py  test_core.py  test_heartbeat.py  test_models.py  test_security_and_distributed.py  test_skills.py  test_tools.py
(+57 files in other folders)
