[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maagentclaw"
version = "1.3.0"
description = "多 Agent 管理系统 - 灵感来自 OpenClaw"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "MAgentClaw Team", email = "team@maagentclaw.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "dashscope>=1.0.0",
    "tiktoken>=0.5.0",
    "websockets>=10.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/MAgentClaw"
Documentation = "https://maagentclaw.readthedocs.io"
Repository = "https://github.com/your-org/MAgentClaw"
Issues = "https://github.com/your-org/MAgentClaw/issues"
Changelog = "https://github.com/your-org/MAgentClaw/blob/main/CHANGELOG.md"

[project.scripts]
maagentclaw = "maagentclaw.main_enhanced:main"

[tool.setuptools.packages.find]
include = ["maagentclaw*"]

[tool.setuptools.package-data]
maagentclaw = [
    "web/templates/*.html",
    "web/static/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
